调整庄园任务